--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@types/node": "^16.18.72",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/react-slick": "^0.23.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "*",
     "web-vitals": "^2.1.4"
   },
