--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-slick": "^0.23.13",
     "date-fns": "^3.2.0",
     "dayjs": "^1.11.10",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
